Added routing for the new endpoint. Created a type for the filtering. Refactored the card color into the new card types. Started working on the controller
